--- a/ShopFlowers/flowers/templates/flowers.html
+++ b/ShopFlowers/flowers/templates/flowers.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% for el_flowers in flowers %}
-        <div  style="background-color: rgba(45, 35, 89, 0.1)">
+        <div style="border-color: rgba(45, 35, 89, 0.1)">
             <img src="{{ el_flowers.image.url }}">
             <p>Название: {{ el_flowers.title }}</p>
             <p>Описание: {{ el_flowers.text }}</p>
