--- a/ShopFlowers/static/css/404.css
+++ b/ShopFlowers/static/css/404.css
@@ -1,4 +1,8 @@
-.404 {
-    width: 1920px;
-    height: 1080px;
+body{
+    margin: 0;
+}
+img{
+    margin: 0;
+    width: 170vh;
+    height: 100vh;
 }
