Написаны два класса представления (ListView, DetailView) обрабатывающие страницу, где все цветы и страницу с одним выбранным растением.

--- a/ShopFlowers/flowers/templates/flowers.html
+++ b/ShopFlowers/flowers/templates/flowers.html
@@ -33,11 +33,13 @@
 
         <div class="flowers-list">
             {% for flower in flowers %}
-                <div class="flower" style="border-color: rgba(45, 35, 89, 0.1)">
-                    <img src="{{ flower.image.url }}">
-                    <p>{{ flower.title }}</p>
-                    <p>от {{ flower.price }}₽</p>
-                </div>
+                <a href="{% url 'flower' slug=flower.slug %}">
+                    <div class="flower" style="border-color: rgba(45, 35, 89, 0.1)">
+                        <img src="{{ flower.image.url }}">
+                        <p>{{ flower.title }}</p>
+                        <p>от {{ flower.price }}₽</p>
+                    </div>
+                </a>
             {% endfor %}
         </div>
     </section>
