--- a/ShopFlowers/flowers/templates/flowers.html
+++ b/ShopFlowers/flowers/templates/flowers.html
@@ -10,7 +10,7 @@
         <div class="hello-text">
             <p class="p1">КОМНАТНЫЕ РАСТЕНИЯ ОТ А ДО Я</p>
             <p>Рады приветствовать вас в нашем магазине комнатных растений!</p>
-            <p>Мы предлагаем вам широкий выбор красивых и здоровых растений, которые преобразят ваш дом и создадут уютную атмосферу.</p>
+            <p>Мы предлагаем вам широкий выбор красивых растений, которые преобразят ваш дом и создадут уютную атмосферу.</p>
             <p>Здесь вы найдете растения для начинающих и опытных садоводов: от неприхотливых суккулентов до более требовательных орхидей,
             разнообразие видов и сортов: от классических фикусов до редких и экзотических экземпляров,
             качественные товары для ухода: удобрения, горшки, инструменты и многое другое.
@@ -24,9 +24,9 @@
 
         <div class="filters">
             <p>Тип растения</p>
-            {% for flower in flowers %}
+            {% for category in categories %}
                 <ul>
-                    <li><a href="#">{{ flower.category }}</a></li>
+                    <li><a href="{% url 'categories' slug=category.slug %}">{{ category.title }}</a></li>
                 </ul>
             {% endfor %}
         </div>
@@ -43,6 +43,8 @@
             {% endfor %}
         </div>
     </section>
+
+
 
 
 {% endblock base_content %}
