--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -12,7 +12,7 @@
     {% endblock head_title %}
 </head>
 <body>
-    <nav>
+    <nav class="nav_main">
         <div class="logo">
             <a href="{% url 'main' %}"><img src="{% static 'images/name.jpg' %}"></a>
         </div>
