--- a/ShopFlowers/flowers/static/css/flower_style.css
+++ b/ShopFlowers/flowers/static/css/flower_style.css
@@ -1,11 +1,22 @@
-.back {
-    padding-left: 380px;
+.breadcrumb {
+    margin-left: 320px;
     padding-top: 20px;
 }
 
-.back a {
+.breadcrumb ul {
+    display: flex;
+    list-style: none;
+}
+
+.breadcrumb li {
+    font-size: 10pt;
+    padding-left: 2px;
+
+}
+
+.breadcrumb a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgba(88, 88, 88, 1);
     border-bottom: 2px solid rgba(67, 102, 205, 0);
 }
 
@@ -17,8 +28,9 @@
     width: 50%;
     padding-top: 50px;
 }
+
 flower-list>.flower-img{
-    grid-column: 2;
+    grid-column: 1;
 }
 
 .flower-img img{
@@ -26,7 +38,43 @@ flower-list>.flower-img{
     height: 500px;
 }
 
-.flower-list>.flower-text {
-    grid-column: 3;
-
+.flower-list>.flower-property {
+    grid-column: 2;
 }
+
+.flower-list>.flower-text {
+    grid-column: 1 / span 2;
+}
+
+.flower-title {
+    font-size: 14pt;
+    border-bottom: 1px solid rgba(114, 121, 88, 1);
+    padding-bottom: 10px;
+}
+
+.cart button {
+    height: 50px;
+    border-style: none;
+    background-color: rgba(114, 121, 88, 1);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 10px;
+}
+
+.cart button:hover {
+    height: 50px;
+    border-style: none;
+    background-color: rgba(209, 216, 184, 1);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 10px;
+}
+
+
+
