--- a/ShopFlowers/flowers/static/css/flowers_style.css
+++ b/ShopFlowers/flowers/static/css/flowers_style.css
@@ -4,14 +4,24 @@ a {
     border-bottom: 2px solid rgba(67, 102, 205, 0);
 }
 
-.back {
-    padding-left: 330px;
+.breadcrumb {
+    margin-left: 285px;
     padding-top: 20px;
 }
 
-.back a {
+.breadcrumb ul {
+    display: flex;
+    list-style: none;
+}
+
+.breadcrumb li {
+    font-size: 10pt;
+    padding-left: 2px;
+}
+
+.breadcrumb a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgba(88, 88, 88, 1);
     border-bottom: 2px solid rgba(67, 102, 205, 0);
 }
 
@@ -22,14 +32,16 @@ a {
 
 .category-list {
     background: rgba(209, 216, 184, 1);
-    height: 100px;
-    font-size: 30pt;
     text-align: center;
+    height: 90px;
+
 }
 
-.category-list p {
-    text-color: gray;
+.category-list span {
+    text-color: rgba(45, 44, 44, 1);
     font-family: 'myFont';
+    font-size: 30pt;
+    display: inline-block;
     padding-top: 25px;
 }
 
