--- a/ShopFlowers/flowers/templates/flower.html
+++ b/ShopFlowers/flowers/templates/flower.html
@@ -6,8 +6,13 @@
 {% endblock head_title %}
 
 {% block base_content %}
-<div class="back">
-    <a href="{% url 'flowers' %}"><p>&larr; Назад</p></a>
+<div class="breadcrumb">
+    <ul>
+        <li class="breadcrumb_item"><a href="{% url 'main' %}">Главная /</a></li>
+        <li class="breadcrumb_item"><a href="{% url 'flowers' %}">Комнатные растения /</a></li>
+        <li class="breadcrumb_item"><a href="{% url 'categories' slug=category.slug %}">{{ category.title }} /</a></li>
+        <li class="breadcrumb_item"><a href="{% url 'flower' slug=flower.slug %}">{{ flower.title }}</a></li>
+    </ul>
 </div>
 
 <section class="flower-list">
@@ -15,12 +20,20 @@
         <img src="{{ flower.image.url }}">
     </div>
 
-    <div class="flower-text">
-        <p>{{ flower.title }}</p>
-        <p>от {{ flower.price }}₽</p>
+    <div class="flower-property">
+        <p class="flower-title">{{ flower.title }}</p>
+        <p>{{ flower.price }}₽</p>
+        <div class="cart">
+            <button type="submit">Добавить в корзину</button>
+        </div>
     </div>
 
-    <p>{{ flower.text }}</p>
+    <p class="flower-text">{{ flower.text }}</p>
+</section>
+
+<section class="trade">
+    <h1>Вам может понравиться:</h1>
+    <h1>Тут будет подборка сопутствующий товаров</h1>
 </section>
 
 
