--- a/ShopFlowers/static/css/base_style.css
+++ b/ShopFlowers/static/css/base_style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
 }
 
-nav {
+.nav_main {
     display: grid;
     grid-template-columns: 20% 50% 15% 15%;
 }
@@ -26,7 +26,7 @@ nav .networks {
     align-self: center;
 }
 
-.networks a{
+.networks a {
     text-decoration: none;
     color: rgb(0, 0, 0);
     border-bottom: 2px solid rgba(67, 102, 205, 0);
@@ -84,8 +84,9 @@ nav form {
 
 nav .user{
     grid-column: 4;
-    justify-self: center;
+    justify-self: end;
     align-self: center;
+    padding-right: 30px;
 }
 
 .user img {
