--- a/ShopFlowers/static/css/base_style.css
+++ b/ShopFlowers/static/css/base_style.css
@@ -28,8 +28,14 @@ nav .networks {
 
 .networks a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
-    border-bottom: 2px solid rgba(67, 102, 205, 0);
+    color: rgba(40, 49, 6, 1);
+    border-bottom: none;
+}
+
+.networks a:hover {
+    text-decoration: none;
+    color: rgba(119, 126, 92, 1);
+    border-bottom: none;
 }
 
 nav .find {
@@ -83,6 +89,8 @@ nav form {
 }
 
 nav .user{
+    display: flex;
+    gap: 10px;
     grid-column: 4;
     justify-self: end;
     align-self: center;
@@ -128,19 +136,118 @@ nav .user{
 
 
 
+
+
+
+.dropdown-user {
+  position: relative;
+  display: inline-block;
+}
+
+.drop-btn {
+    cursor: pointer;
+    border: 1px solid DimGrey;
+    background: transparent;
+    border-radius: 25px;
+}
+
+.drop-btn:hover {
+  background-color: rgba(202, 208, 183, 1);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgba(202, 208, 183, 1);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 1);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 10pt;
+}
+
+.dropdown-content a:hover {
+    background-color: rgba(214, 215, 210, 1)
+}
+
+.show {display:block;}
+
+
+
+
+
+
+.form-img img {
+    width: 25px;
+    height: 25px;
+}
+
+.log, .pas {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-input {
+	border: none;
+	width: 160px;
+	height: 25px;
+	border-bottom: 2px solid rgba(114, 121, 88, 1);
+	background-color: white;
+}
+
+.form-input:hover {
+	border: 2px solid rgba(114, 121, 88, 1);
+}
+
+.entrance, .registration {
+	text-align: center;
+	width: 200px;
+	padding: 10px;
+	background-color: rgba(114, 121, 88, 1);
+	border: none;
+	margin-top: 5px;
+	color: white;
+}
+
+.entrance:hover, .registration:hover {
+	background-color: rgba(209, 216, 184, 1);
+	color: black;
+}
+
 .overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(255, 255, 255, 0.8);
+	display: none;
+}
+
+.popup {
 	position: absolute;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
 	width: 500px;
-	height: 400px;
 	padding: 50px;
 	text-align: center;
 	border-radius: 10px;
 	box-shadow: 10px 10px 30px rgb(180, 179, 179);
-    display: none;
+    background-image: url(../images/auth.png);
+    background-size: cover;
+	background-repeat: no-repeat;
 }
 
-
+.hint {
+    font-size: 10pt;
+    color: rgba(88, 88, 88, 1);
+    height: 5px;
+}
 
