--- a/ShopFlowers/users/templates/login.html
+++ b/ShopFlowers/users/templates/login.html
@@ -2,16 +2,19 @@
 {% load static %}
 {% block head_title %}
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static 'css/auth_style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/login-register_style.css' %}" />
     <title>{{ title }}</title>
 {% endblock head_title %}
 
 {% block base_content %}
+<input type="hidden" name="next" value="{{ next }}"/>
+
 <section class="popup">
 <div class="overlay">
     <h2 class="form-title">{{ title }}</h2>
     <form method="post" action="{% url 'login' %}" >
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ next }}"/>
 
         <div class="form-error">{{ form.non_field_errors }}</div>
         {% for form in form_auth %}
