Добавлены формы на сброс пароля SetPasswordUserForm(SetPasswordForm),PasswordResetUserForm(PasswordResetForm). Оформлена страница настройки пользователя. Готов сброс пароля по E-mail.

--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <p class="author">&#169 Оформление сайта. ООО «Правообладатель контента», 2024-2025</p>
+    <p class="author">&#169 Оформление сайта. ООО «Оформитель», 2024-2025</p>
 
 
     <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
