Добавлены формы на сброс пароля SetPasswordUserForm(SetPasswordForm),PasswordResetUserForm(PasswordResetForm). Оформлена страница настройки пользователя. Готов сброс пароля по E-mail. Добавлены модели FlowersCare, FlowersPots.

--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -22,8 +22,8 @@
             <a href="{% url 'flowers' %}">Комнатные растения</a>
             <a href="#">Горшки для растений</a>
             <a href="#">Уход за растениями</a>
-            <a href="#">О нас</a>
-            <a href="#">Услуги</a>
+            <a href="{% url 'about' %}">О нас</a>
+            <a href="{% url 'services' %}">Услуги</a>
         </div>
 
         <div class="find">
