--- a/ShopFlowers/users/static/css/profile_style.css
+++ b/ShopFlowers/users/static/css/profile_style.css
@@ -3,6 +3,11 @@
   src: url('../fonts/Mirra.otf');
 }
 
+.title {
+    color: rgba(114, 121, 88, 1);
+    padding-left: 5px;
+}
+
 .name-photo {
     display: flex;
     gap: 50px;
@@ -70,7 +75,6 @@ span {
     height: 5px;
 }
 
-
 .form-input-profile {
 	border: none;
 	width: 300px;
@@ -90,7 +94,7 @@ span {
     text-align: center;
 }
 
-.p {
+.btn-p {
 	border: none;
 	width: 310px;
 	height: 36px;
@@ -99,7 +103,7 @@ span {
     background: transparent;
 }
 
-.p:hover {
+.btn-p:hover {
     cursor: pointer;
 }
 
@@ -121,7 +125,7 @@ span {
 	border: none;
 	border-radius: 10px;
 	margin-top: 5px;
-    color: rgba(40, 49, 6, 1);
+    color: rgba(202, 208, 183, 1);
 }
 
 .save-profile:hover, .password-change:hover {
