--- a/ShopFlowers/users/templates/password_reset_done.html
+++ b/ShopFlowers/users/templates/password_reset_done.html
@@ -12,7 +12,7 @@
 <section class="popup">
     <div class="overlay">
         <h2 class="form-title">Сброс пароля</h2>
-        <p>Мы отправили вам по электронной почте инструкции по установке пароля, если у вас есть учетная запись,
+        <p class="p-text">Мы отправили вам по электронной почте инструкции по установке пароля, если у вас есть учетная запись,
         указав указанный вами адрес электронной почты. Вы должны получить их в ближайшее время.
         Если вы не получили электронное письмо, пожалуйста, убедитесь,
         что вы указали адрес, на который указывали при регистрации, и проверьте папку со спамом.</p>
