--- a/ShopFlowers/users/templates/profile.html
+++ b/ShopFlowers/users/templates/profile.html
@@ -10,7 +10,7 @@
 {% block base_content %}
 <section class="popup">
     <div class="menu_profile">
-        <h2>Личный кабинет</h2>
+        <h2 class="title">Личный кабинет</h2>
             <ul>
                 <li><a class="bt-my-profile">Настройки</a></li>
                 <li><a class="bt-my-orders">Мои заказы</a></li>
@@ -49,7 +49,7 @@
                     <span>{{ form.username.label }}:</span><br><p>{{ form.username }}</p>
                     <span>{{ form.email.label }}:</span><br><p>{{ form.email }}</p>
                     <span><label>Изменить пароль:</label></span><br><br>
-                    <a href="{% url 'password-change' %}"><button type="button" class="p">********</button></a>
+                    <a href="{% url 'password-change' %}"><button type="button" class="btn-p">********</button></a>
                     <div class="form-error">{{ form.errors }}</div>
                 </div>
 
